--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -460,9 +460,22 @@ section {
 /*--------------------------------------------------------------
 # About Us
 --------------------------------------------------------------*/
+.about {
+  background: linear-gradient(rgba(1, 41, 42, 0.5), rgba(7, 56, 57, 0.5)), url("../img/blue-background.jpg") fixed center center;
+}
+
+.about p {
+  color: #fff;
+}
+
+.about h2 {
+  color: #fff;
+}
+
 .about h3 {
   font-weight: 400;
   font-size: 26px;
+  color: #fff;
 }
 
 .about ul {
