--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -498,6 +498,47 @@ section {
 }
 
 /*--------------------------------------------------------------
+# Proven Results
+--------------------------------------------------------------*/
+.result {
+  background: linear-gradient(rgba(1, 41, 42, 0.5), rgba(7, 56, 57, 0.5)), url("../img/blue-background.jpg") fixed center center;
+}
+
+.result p {
+  color: #fff;
+}
+
+.result h2 {
+  color: #fff;
+}
+
+.result h3 {
+  font-weight: 400;
+  font-size: 26px;
+  color: #fff;
+}
+
+.result ul {
+  /* list-style: none; */
+  padding: 0;
+}
+
+.result ul li {
+  padding-bottom: 10px;
+  /* color: black; */
+}
+
+.result ul i {
+  font-size: 20px;
+  padding-right: 4px;
+  color: #70b9b0;
+}
+
+.result p:last-child {
+  margin-bottom: 0;
+}
+
+/*--------------------------------------------------------------
 # Services
 --------------------------------------------------------------*/
 .services .icon-box {
